# naver-image-scraper

./: Taskfile.yml  pyproject.toml  setup.py
naver_image_scraper/: __main__.py  get_image.py
